# wasm-tetris

./: .vite.config.ts.swp  Cargo.toml  README.md  TODO.md  compile.bat  index.html  package-lock.json  vite.config.ts
ai/: Cargo.toml
ai/src/: dqn.rs  environment.rs  main.rs  memory.rs  model.rs  tetris.rs  tui.rs
backend/: .gitignore  Cargo.toml  bacon.toml  tetris_leaderboard.json
backend/src/: auth.rs  broadcast.rs  game.rs  importer.rs  leaderboard.rs  main.rs  proto.rs  ws.rs
frontend/: .gitignore  compile.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  publish.bat  vite.config.ts
frontend/lib/: Cargo.toml  TODO.md
frontend/lib/src/: codec.rs  draw.rs  input.rs  instance.rs  lib.rs
frontend/src/: auth.js  client.ts  darkmode.css  index.ts  lightmode.css  style.css  tsconfig.json
lib/: Cargo.toml
lib/src/: draw.rs  game.rs  input.rs  lib.rs  types.rs
src/: index.ts  style.css
tetris-core/: Cargo.toml
tetris-core/src/: lib.rs  net.rs
tetris-core/src/tetris/: board.rs  game.rs  mod.rs
