[package]
name = "tetris-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
tetris-core = { path = "../tetris-core" }
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9"
actix-web-lab = "0.24.1"
actix-ws = "0.3.0"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
replace_with = "0.1.8"
serde_json = "1.0.137"
serde_cbor.workspace = true
tokio = { version = "1.45.1", features = ["macros"] }
futures-util.workspace = true
persistent-kv = "1.0.2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
