[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
wasm-bindgen-test = "0.3.45"

rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.72"
features = [
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'HtmlImageElement',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
  'Window',
  'Location',
  'RequestInit',
]


[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = true

[features]
# default = ["console_error_panic_hook", "wee_alloc"]
default = ["console_error_panic_hook"]

[lints.clippy]
enum_glob_use = { level = "warn", priority = 1 }
pedantic = "warn"
nursery = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
suboptimal_flops = { level = "allow", priority = 1 }
