[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tetris-core = { path = "../../tetris-core", features = ["wasm-bindgen"] }

wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
wasm-bindgen-test = "0.3.45"

console_error_panic_hook = { version = "0.1.6", optional = true }
ws_stream_wasm = "0.7.4"
wasm-bindgen-futures = "0.4.50"
futures_codec = { version = "0.4.1", features = ["cbor"] }
serde.workspace = true
serde_cbor.workspace = true
bytes = "0.5.4"
futures-util.workspace = true
async_io_stream = "0.3.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.72"
features = [
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'HtmlImageElement',
  'OffscreenCanvas',
  'OffscreenCanvasRenderingContext2d',
  'Window',
  'Location',
  'RequestInit',
  'Headers',
]

[features]
default = ["console_error_panic_hook"]


[lints.clippy]
enum_glob_use = { level = "warn", priority = 1 }
pedantic = "warn"
nursery = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
suboptimal_flops = { level = "allow", priority = 1 }

[lints.rust]
unexpected_cfgs = "allow"
